gatekeeper/example/gatekeeper-patch.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: gatekeeper-validating-webhook-configuration
  annotations:
    # Placeholder, patch with the gatekeeper namespace value
    certmanager.k8s.io/inject-ca-from: example-namespace/gatekeeper-serving-cert
webhooks:
  - name: validation.gatekeeper.sh
    clientConfig:
      service:
        # Placeholder, patch with the gatekeeper namespace value
        namespace: example-namespace
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - "namespaces"
          - "ingresses"
  - name: check-ignore-label.gatekeeper.sh
    clientConfig:
      service:
        # Placeholder, patch with the gatekeeper namespace value
        namespace: example-namespace
